client/src/components/Navigation/Navigation.module.css
.navWrapper {
    background-color: rgba(255,255,255,0.1);
}

.navContent {
    max-width: 1280px;
    margin: 0 auto;
    position: relative;
}

.logo {
    background-image: url("../../assets/Logo11.png");
    width: 120px;
    height: 100px;
    background-size: 120px 100px;
    background-position: center;
    margin-bottom: 0;
}
.siteNavigation {
    display: flex;
    align-items: center;
    padding: 0.5rem 1rem;
    padding-bottom: 0;
    border-bottom-left-radius: 3em;
    border-bottom-right-radius: 3em;
}

.siteNavigation  ul:first-of-type {
    flex-grow: 1;
}

.siteNavigation ul {
    display: flex;
    justify-content: flex-start;
    gap: 2rem;
    list-style: none;
    align-items: center;
    padding: 0 1rem;
    font-size: 1.2em;
    margin: 0;
}

.siteNavigation a {
    text-decoration: none;
    color: white;
    text-align: center;
}

.siteNavigation a:hover {
    color: rgba(133, 255, 122, 1);
}

.navContent .dropDown {
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    bottom: -117px;
    z-index: 1000;
    background-color: #ccccccc0;
    width: 100%;
}


.dropDown a,
.dropDown .signUp {
    display: block;
    text-decoration: none;
    color: black;
    width: 100%;
    border-bottom: 1px solid rgba(0, 0, 0, 0.23);
    padding-left: 1em;
    padding-top: 1em;
    padding-bottom: 1em;
}


.dropDown .signUp {
    border: none;
}

.dropDown {
    padding-left: 0;
    display: none;
}

.username {
    padding-top: 1em;
    color: white;
    border-bottom: 2px solid white;
    text-align: right;
    font-style: italic;
    padding-right: 2em;
}

.signUp {
    border: 2px solid #ccc;
    padding: 0.5em;
    border-radius: 0.5em;
}

.signUp:hover {
    background-color:  rgba(255,255,255,0.1);
}

.siteNavigation > i {
   display: none;
   font-size: 2.5em;
   display: none;
}


@media (max-width: 600px) {
    .siteNavigation {
        justify-content: space-between;
    }
    
    .siteNavigation ul {
        font-size: 1em;
    }

    .username {
        font-size: 0.7em;
    }

    .logo {
    width: 90px;
    height: 70px;
    background-size: 90px 70px;
    text-align: center;
    padding: 1em;
    }


    .siteNavigation ul {
        display: none;
    }

    .siteNavigation > i {
        display: block;
     }
}

